# report-analyst

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COLAB.md  Dockerfile  Dockerfile.api  Dockerfile.enterprise  Dockerfile.jobs  EXPECTED_FILE_FORMATS.md  INSTALL.md  Procfile  README.md  README.md.backup  TEST_FAILURES_ANALYSIS.md  app.json  chunk_subset_csv.py  docker-compose.coolify-customer.yml  docker-entrypoint.sh  ok.env  package.json  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.dark.toml  config.toml
alembic/: env.py
app/: streamlit_app.py
docs/: BENCHMARK_DATASET_FLOW.md  CLIMRETRIEVE_BENCHMARK_README.md  CLIMRETRIEVE_IO_EXPLANATION.md  COMPLETE_BENCHMARKING_GUIDE.md  COOLIFY.md  DATABASE_MIGRATIONS.md  DOCKER-DEPLOY.md  HOW_TO_RUN_BENCHMARK.md  HOW_TO_RUN_CLIMRETRIEVE_BENCHMARK.md.old  QUICK_START_BENCHMARK.md  S4M_BENCHMARK_GUIDE.md  S4M_GROUND_TRUTH_EXPLANATION.md  SCRIPTS_ORGANIZATION.md  STREAMLIT_BENCHMARKING_WORKFLOW.md  STREAMLIT_BENCHMARK_INTEGRATION_GUIDE.md  UNIFIED_BENCHMARKING_GUIDE.md  benchmarking_plan.md
migrations/: run_migrations.sh
report_analyst/: LICENSE  __init__.py  consolidated_results_view.py  streamlit_app.py  streamlit_app_backend.py
report_analyst_api/: Dockerfile  LICENSE  main.py  schemas.py
report_analyst_enterprise/: Dockerfile  LICENSE  README.md  __init__.py  requirements.txt
report_analyst_jobs/: Dockerfile  LICENSE  contribution.py  event_handlers.py  event_router.py  event_router_example.py  event_routing.yaml  llm_integration.py  nats_integration.py
(+247 files in other folders)
